# anch-framework

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  anch-namespace.dox  index.dox
anch-cli/: AnchCLI.cmake.in  CMakeLists.txt  anch-cli.dox
anch-cli/inc/cli/: app.hpp  arg.hpp  args.hpp  formatter.hpp  utils.hpp
anch-cli/src/cli/: args.cpp  cli.cpp  formatter.cpp  utils.cpp
anch-cli/test/: testCli.cpp  testFormatter.cpp
anch-conf/: AnchConf.cmake.in  CMakeLists.txt  anch-conf.dox  cascade.todo
anch-conf/inc/conf/: confError.hpp  configuration.hpp  parsers.hpp  placeholders.hpp  resolvers.hpp  section.hpp  subplaceholder.hpp
anch-conf/inc/resource/: resource-namespace.dox
anch-conf/src/conf/: confError.cpp  configuration.cpp  parsers.cpp  placeholders.cpp  resolvers.cpp  subplaceholder.cpp
anch-conf/test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test-defprof-UT.conf  test-defprof.ini  test-placeholders.ini  testConf.cpp  testConfProfile.cpp  testDefaultProfiles.cpp  testPattern.cpp  testPlaceHolders.cpp  testResource.cpp
anch-crypto/: AnchCrypto.cmake.in  CMakeLists.txt  anch-crypto.dox
anch-crypto/inc/crypto/: crypto-namespace.dox  hmac.hpp
anch-crypto/src/crypto/: hmac.cpp
anch-crypto/test/: benchAnchOpenssl.cpp  testAES.cpp  testAesCbc.cpp  testAesCfb.cpp  testAesCtr.cpp  testAesCtrBigData.cpp  testAesEcb.cpp  testAesOfb.cpp  testAesPcbc.cpp  testBase64.cpp  testBlockCipherModeOfOperation.cpp  testHmac.cpp  testMD5.cpp  testPadding.cpp  testSHA1.cpp  testSHA2.cpp  testUuid.cpp
anch-cutils/: AnchCutils.cmake.in  CMakeLists.txt  anch-cutils.dox
anch-cutils/inc/cutils/: iostream.hpp
anch-cutils/src/cutils/: iostream.cpp
anch-cutils/test/: testCStream.cpp
anch-date/: AnchDate.cmake.in  CMakeLists.txt  anch-date.dox
anch-date/inc/date/: date-namespace.dox  date.hpp  dateFormatter.hpp  invalidFormatException.hpp
anch-date/src/date/: date.cpp  dateFormatter.cpp  invalidFormatException.cpp
anch-date/test/: testDateFormat.cpp
anch-device/: AnchDevice.cmake.in  CMakeLists.txt
anch-device/inc/device/: cpu.hpp  device-namespace.dox  deviceException.hpp  network.hpp  networkInterface.hpp  uuidProvider.hpp
anch-device/src/device/: deviceException.cpp  network.cpp  networkInterface.cpp  uuidProvider.cpp
anch-device/test/: testCPU.cpp  testInvalidNetworkInterface.cpp  testUuid.cpp  testValidNetworkInterface.cpp
anch-events/: AnchEvents.cmake.in  CMakeLists.txt  anch-events.dox
anch-events/inc/events/: event.hpp  eventBus.hpp  eventHandler.hpp  events-namespace.dox  observable.hpp  observer.hpp
anch-events/src/events/: observable.cpp
anch-events/test/: testEventBus.cpp  testEvents.cpp  testMultiHandler.cpp
anch-file/: AnchFile.cmake.in  CMakeLists.txt
anch-file/inc/file/: file-namespace.dox  file.hpp  fileException.hpp
anch-file/src/file/: file.cpp  fileException.cpp
anch-file/test/: testFile.cpp
anch-ini/: AnchIni.cmake.in  CMakeLists.txt  anch-ini.dox
anch-ini/inc/ini/: parser.hpp  parserError.hpp  section.hpp
anch-ini/src/ini/: parser.cpp  parserError.cpp  section.cpp
anch-ini/test/: test.ini  testParser.cpp
anch-json/: AnchJson.cmake.in  CMakeLists.txt  anch-json.dox
anch-json/inc/json/: constants.hpp  factory.hpp  genericMapper.hpp  json-namespace.dox  json.hpp  lexer.hpp  mapper.hpp  mappingError.hpp  mappingFunctions.hpp  mappingOptions.hpp  parser.hpp  primitiveMapper.hpp  reader.hpp  readerContext.hpp  writerContext.hpp
anch-json/src/json/: boolLexer.cpp  booleanMapper.cpp  constants.cpp  doubleMapper.cpp  floatMapper.cpp  int16Mapper.cpp  int32Mapper.cpp  int64Mapper.cpp  integerLexer.cpp  integerLexerExtended.cpp  json.cpp  lexer.cpp  mapper.cpp  mappingError.cpp  mappingFunctions.cpp  mappingOptions.cpp  numberLexer.cpp  numericsMapper.cpp  parser.cpp  reader.cpp  readerContext.cpp  stringLexer.cpp  stringMapper.cpp  stringViewMapper.cpp  stringsMapper.cpp  uint16Mapper.cpp  (+5 more)
anch-json/test/: benchJson.cpp  data_set.json  testJsonMapper.cpp  testLexer.cpp  testReader.cpp  testSerialize.cpp  toto.json  totos.json
anch-json/utils/: jsonFormat.cpp
anch-log/: AnchLogger.cmake.in  CMakeLists.txt  anch-log.dox  anch-logger.dox
anch-log/test/: anch-logger-bad-logger.conf  anch-logger-bad-writer.conf  anch-logger.conf  customFile.ini  low-priority-logger.conf  testLogger.cpp
anch-logger/: AnchLogger.cmake.in  CMakeLists.txt  anch-logger.dox
anch-logger/test/: anch-logger.conf  ant-logger.conf  customFile.ini  logger_test.cpp  low-priority-logger.conf  testCustomFile.cpp  testDefaultConfig.cpp  testLowPriority.cpp  testRotate.cpp
anch-network/: AnchNetwork.cmake.in  CMakeLists.txt
anch-network/test/: tcpSocketTest.cpp  tcpStreamTest.cpp  udpSocketTest.cpp
anch-oas/: AnchOAS.cmake.in  CMakeLists.txt
anch-resource/: AnchResource.cmake.in  CMakeLists.txt  anch-resource.dox
anch-resource/test/: test.ini  testResource.cpp
anch-rest/: AnchRest.cmake.in  CMakeLists.txt  anch-rest.dox
anch-rest/nginx/: NginxRouter.cpp  NginxRouter.hpp  config  ngx_anch_bootstrap_module.c
anch-rest/test/: testMapperRegistry.cpp  testRouter.cpp
anch-sql/: AnchSQL.cmake.in  CMakeLists.txt  FindMySQL.cmake  FindSQLite3.cmake  anch-sql.dox  sql-namespace.dox
anch-sql/test/: anch.db  db_con.conf  mysql_clean.sql  mysql_init.sql  postgresql_init.sql  testMySQL.cpp  testPostgreSQL.cpp  testPrepareStatementWildCards.cpp  testSQLConnectionFactory.cpp  testSQLite3.cpp  testSelectBuilder.cpp
anch-utils/: AnchUtils.cmake.in  CMakeLists.txt
anch-utils/inc/: collectors.hpp  convert.hpp  endianness.hpp  fluent.hpp  flux.hpp  lessPtrCompare.hpp  optional.hpp  processor.hpp  resourcePool.hpp  singleton.hpp  stream.hpp  stringUtils.hpp  threadPool.hpp  uuid.hpp
anch-utils/test/: testConvert.cpp  testFluent.cpp  testFlux.cpp  testOptional.cpp  testResourcedPool.cpp  testSingleton.cpp  testStream.cpp  testStringUtils.cpp  testThreadPool.cpp  testUuid.cpp
anch-uuid/: AnchUUID.cmake.in  CMakeLists.txt  anch-uuid.dox
anch-uuid/inc/: uuid.hpp
anch-uuid/src/: uuid.cpp
anch-uuid/test/: testUuid.cpp
(+3738 files in other folders)
